# sisy

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
backend/: agent.py  call_agent_single_request.py  main.py  pyproject.toml  requirements.txt  test_agent.py
backend/minimax_mcp/: __init__.py  client.py  exceptions.py
backend/static/: +not-found.html  _sitemap.html  index.html  me.html  modal.html  routine.html  settings.html
backend/static/(tabs)/: me.html  routine.html
backend/static/_expo/static/js/web/: entry-0339552a090c6a79059ce7d6ccda8793.js  entry-42c7c11f554f9474f9386ce662a8d8cd.js
designs/: home.html  me.html  routine.html
docs/: android_build_guide.md  auth.md  demo.md  dev_verification.md  project_glossary.md  submit.md  v0.md  vision.md
docs/demo/: demo.md  demo_improved.md
eval/: eval_agent.py  eval_dataset.json  eval_experiment.py  metrics.py  run_experiment.py  upload_dataset.py  utils.py
myroutine/: app.json  eas.json  fix_appState.js  global.d.ts  package-lock.json  package.json  tsconfig.json  update_appState.js
myroutine/app/: _layout.tsx
myroutine/app/(tabs)/: _layout.tsx  index.tsx  me.tsx  routine.tsx  settings.tsx
myroutine/components/: CompletionModal.tsx  ExternalLink.tsx  RescheduleModal.tsx  RoutineItemModal.tsx  TaskDetailModal.tsx  Themed.tsx  TimePicker.tsx
myroutine/constants/: Colors.ts
myroutine/lib/: .minimax.ts.swp  api.ts  appState.test.ts  appState.tsx  dateUtils.ts  installId.ts  storage.test.ts  storage.ts  templates.ts  timeline.ts  types.ts  ui.ts
scripts/: reproduce_screenshots.py
(+3 files in other folders)
